Fix contrast error buttons

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -429,11 +429,13 @@ input[name='q']::placeholder {
     padding: .25rem .5rem !important;
 }
 
-.color-btn, .color-btn a {
+.color-btn, .remove-item small,
+#color-btn-ed,
+.color-btn #color-btn-pr-del {
     color:#800707;
 }
 
-.color-btn #color-btn,
+#color-btn,
 .color-btn #color-btn-pr,
 .color-btn #color-btn-det,
 #color-ord {
